# libgls

./: CMakeLists.txt  README  README.md  gls.pc.in
cmake/: FindGLEWMX.cmake  StringifyShaders.cmake
doc/: FindGLS.cmake  doxyfile.in
gls/: gls.c  gls.glsl  gls.h  gls_version.h.in
test/: gls-test.c
